# Visualization-of-Landscape-Changes-using-Synthesized-Aerial-Imagery

./: pyproject.toml  readme.md
code/blender/: script.py  vt1_vis.blend  vt1_vis.blend1
code/editor/: package-lock.json  package.json
code/editor/app/: layout.js  page.js
code/editor/components/: editor.jsx  result.jsx  selector.jsx
code/editor/lib/: location.js  tiles.js
code/inference/: api.py
code/unet/: .gitignore  params.yaml  train.submit
code/unet/src/: test.py  train.py
code/unet/src/dataset/: load.py  swiss_image_dataset.py
code/unet/src/model/: unet.py  unet_conditional.py  unet_scratch.py
code/unet/src/pipeline/: ddim_pipeline.py  ddpm_pipeline.py  ddpm_pipeline_scratch.py
code/vitmae/: .gitignore  params.yaml  train.submit
code/vitmae/src/: eval.py  train.py
code/vitmae/src/dataset/: load.py  swiss_image_dataset.py
data/: 01_downloader.ipynb  02_lulc-extraction.ipynb  03_inspect.ipynb  04_merge-tiles.ipynb
data/source/: be-b-00.03-37-area-var-v01.xlsx
data/source/LU-CH/: LU-CH_2018all.tif
